--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job, .fun-fact  {
+        .FeatureList, .ApplicationOverview, .TechnologyOverview, .LastUpdated, .BasicTechnicalFeatures, .AdvancedTechnicalFeatures  {
             background: #1BB4E5;
             padding: 15px;
             margin-bottom: 10px;
@@ -31,38 +31,40 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>Michael Liberty</h1>
+            <h1>Product Name</h1>
             <h1>Preferred Name: Mike Liberty </h1>
 		<img src="profile picture" style="width:100;height:100">
         </header>
 
-        <section class="lewis">
-			<h2>Year at Lewis: senior </h2>
-			<h2>Lewis major/minor/concentrations: Aviation Administration</h2>
-			<h2>Reasons for pursuing this degree: To become more involved in the running in a airline</h2>
+        <section class="ApplicationOverview">
+			<h2>Application Overview</h2>
+			<h2></h2>
         </section>
 
-		<section class="course">
-            <h2>Reasons for Taking This Course</h2>
-            <p>To have a better understanding of the technolodgy involved in a airline</p>
+		<section class="TechnologyOverview">
+            <h2>Technology Overview</h2>
+            <p></p>
         </section>
 
-		<section class="job">
-            <h2>Current/Recent Job</h2>
-			<p>Ramp Supervisior</p>
+		<section class="Last Updated">
+            <h2>Last Updated</h2>
+			<p>3/18/2024</p>
         </section>		
 
-        <section class="hobbies">
-            <h2>Hobbies and Special Interests</h2>
-            <p>Hockey and Video Games</p>
+        <section class="FeatureList">
+            <h2>Feature List</h2>
+            <p></p>
         </section>
 
-        <section class="fun-fact">
+        <section class="BasicTechnicalFeatures">
             <h2>Fun Fact</h2>
             <p>I have done every position involved with the normal operations of a airline and i am certified to push out and tow all types of aircraft such as A320, A330, and B777</p>
         </section>
 	<section class="Last updated">
 		<h2>Last Updated on 01/23/2024 </h2>
+	</section>
+	<section class="AdvancedTechnicalFeatures">
+		<h2>Advanced Technical Features</h2>
 	</section>
     </div>
 </body>
