--- a/index.html
+++ b/index.html
@@ -32,21 +32,18 @@
     <div class="container">
         <header class="main-info">
             <h1>Product Name</h1>
-            <h1>Preferred Name: Mike Liberty </h1>
-		<img src="profile picture" style="width:100;height:100">
         </header>
 
         <section class="ApplicationOverview">
 			<h2>Application Overview</h2>
 			<h2></h2>
         </section>
-
 		<section class="TechnologyOverview">
             <h2>Technology Overview</h2>
             <p></p>
         </section>
 
-		<section class="Last Updated">
+		<section class="LastUpdated">
             <h2>Last Updated</h2>
 			<p>3/18/2024</p>
         </section>		
@@ -57,12 +54,8 @@
         </section>
 
         <section class="BasicTechnicalFeatures">
-            <h2>Fun Fact</h2>
-            <p>I have done every position involved with the normal operations of a airline and i am certified to push out and tow all types of aircraft such as A320, A330, and B777</p>
-        </section>
-	<section class="Last updated">
-		<h2>Last Updated on 01/23/2024 </h2>
-	</section>
+            <h2>BasicTechnicalFeatures</h2>
+            <p></p>
 	<section class="AdvancedTechnicalFeatures">
 		<h2>Advanced Technical Features</h2>
 	</section>
