--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <h2>Feature List</h2>
             <p></p>
         </section>
-
         <section class="BasicTechnicalFeatures">
             <h2>BasicTechnicalFeatures</h2>
             <p></p>
+	</section>
 	<section class="AdvancedTechnicalFeatures">
 		<h2>Advanced Technical Features</h2>
 	</section>
