--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>Product Name</h1>
+            <h1>Product Name: Airline Loadsheet</h1>
         </header>
 
         <section class="ApplicationOverview">
 			<h2>Application Overview</h2>
-			<h2></h2>
+			<p>This aplication will allow a airline to Create and manage the load on aircraft. It will warn the user if weight goes beyond the center of gravity limits and allows the user to make changes of locations of cargo or containers</p>
+			<p>Many airlines still use paper load sheets which are often difficult to read and do not allow changes to made easily if containers need to be moved or removed from the plane.</p>
         </section>
 		<section class="TechnologyOverview">
             <h2>Technology Overview</h2>
-            <p></p>
+            <p>Html and CSS</p>
         </section>
 
 		<section class="LastUpdated">
@@ -50,14 +51,17 @@
 
         <section class="FeatureList">
             <h2>Feature List</h2>
-            <p></p>
+            <p>Creation of load sheet and postions based on an A330 and the load will affext weight and balnce of the aircraft</p>
+	    <h2>Future Feature list</h2>
+	    <p>Move positions of containers and make updates to what is contained in them</p>
         </section>
         <section class="BasicTechnicalFeatures">
             <h2>BasicTechnicalFeatures</h2>
-            <p></p>
+            <p>Creation of Lists and headers</p>
 	</section>
 	<section class="AdvancedTechnicalFeatures">
 		<h2>Advanced Technical Features</h2>
+		<P>Movable boxes that contain information and will change the values of the overall weight</P>
 	</section>
     </div>
 </body>
